# AdriaBOX

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  file_di_prova.txt  pyproject.toml  requirements.txt
data/: metadata.db
plantuml/: architecture.puml  auth_sequence.puml  delete_sequence.puml  deployment_diagram.puml  download_sequence.puml  level_0_architecture.puml  level_1_download_sequence.puml  level_1_fault_tolerance_sequence.puml  level_1_upload_sequence.puml  metadata_sequence.puml  sequence.puml  upload_sequence.puml  use_case.puml
report/: ds_final_report.tex
sql/: schema.sql
src/client/: __init__.py  api.py  cli.py  cli_interactive.py  client.py  config.py  core.py  exceptions.py  interactive.py  max.txt  session.py  validators.py
src/common/: __init__.py  chunking.py  config.py  constants.py  hash.py  models.py  tcp.py
src/metadata_server/: __init__.py  db.py  metadata.db  server.py
src/metadata_server/data/: Sam.txt
src/storage_node/: __init__.py  node.py
src/storage_node/data/: inviodidati.txt  prova.txt
src/test/: test_client.py  test_storage_node.py
tests/: test_client.py  test_metadata_server.py  test_node_registry.py
